--- a/auth/package.json
+++ b/auth/package.json
@@ -15,6 +15,8 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.6.1",
     "ts-node-dev": "^1.0.0-pre.62",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "@types/mongoose": "^5.7.36",
+    "mongoose": "^5.10.5"
   }
 }
