--- a/tickets/package.json
+++ b/tickets/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@omjk_ticket/common": "^1.0.4",
+    "@omjk_ticket/common": "1.0.6",
     "@types/cookie-session": "^2.0.41",
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
@@ -29,15 +29,16 @@
     "express-validator": "^6.6.1",
     "jest": "^26.4.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.5",
-    "ts-node-dev": "^1.0.0-pre.62",
-    "typescript": "^4.0.2"
+    "mongoose": "^5.10.6",
+    "node-nats-streaming": "^0.3.2",
+    "ts-node-dev": "^1.0.0-pre.63",
+    "typescript": "^4.0.3"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.13",
+    "@types/jest": "^26.0.14",
     "@types/supertest": "^2.0.10",
-    "mongodb-memory-server": "^6.5.1",
+    "mongodb-memory-server": "^6.8.0",
     "supertest": "^4.0.2",
-    "ts-jest": "^26.3.0"
+    "ts-jest": "^26.4.0"
   }
 }
