--- a/infra/k8s/ingress-srv.yml
+++ b/infra/k8s/ingress-srv.yml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-service
@@ -10,6 +10,7 @@ spec:
     - host: ticketing.com
       http:
         paths:
+          - pathType: Prefix
           - path: /api/users/?(.*)
             backend:
               serviceName: auth-srv
@@ -17,6 +18,10 @@ spec:
           - path: /api/tickets/?(.*)
             backend:
               serviceName: tickets-srv
+              servicePort: 3000
+          - path: /api/orders/?(.*)
+            backend:
+              serviceName: orders-srv
               servicePort: 3000
           - path: /?(.*)
             backend:
