--- a/orders/package.json
+++ b/orders/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tickets",
+  "name": "orders",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -38,7 +38,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.14",
     "@types/supertest": "^2.0.10",
-    "mongodb-memory-server": "^6.8.0",
+    "mongodb-memory-server": "^6.9.6",
     "supertest": "^4.0.2",
     "ts-jest": "^26.4.0"
   }
