--- a/infra/k8s/ingress-srv.yml
+++ b/infra/k8s/ingress-srv.yml
@@ -7,23 +7,34 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
-    - host: ticketing.com
+    - host: "ticketing.com"
       http:
         paths:
           - pathType: Prefix
-          - path: /api/users/?(.*)
+            path: "/api/users/?(.*)"
             backend:
-              serviceName: auth-srv
-              servicePort: 3000
-          - path: /api/tickets/?(.*)
+              service:
+                name: auth-srv
+                port:
+                  number: 3000
+          - pathType: Prefix
+            path: /api/tickets/?(.*)
             backend:
-              serviceName: tickets-srv
-              servicePort: 3000
-          - path: /api/orders/?(.*)
+              service:
+                name: tickets-srv
+                port:
+                  number: 3000
+          - pathType: Prefix
+            path: /api/orders/?(.*)
             backend:
-              serviceName: orders-srv
-              servicePort: 3000
-          - path: /?(.*)
+              service:
+                name: orders-srv
+                port:
+                  number: 3000
+          - pathType: Prefix
+            path: /?(.*)
             backend:
-              serviceName: client-srv
-              servicePort: 3000
+              service:
+                name: client-srv
+                port:
+                  number: 3000
