--- a/infra/k8s/expiration-depl.yml
+++ b/infra/k8s/expiration-depl.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: expiration
-          image: stephengrider/expiration
+          image: omarjakmira/expiration
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
