--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,12 @@
     "bootstrap": "^4.5.2",
     "next": "^9.5.3",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-stripe-checkout": "^2.6.3"
   },
   "name": "client",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "dev": "next"
   },
